# lazy-prompts

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt
lazy_prompts/: manage.py  requirements.txt
lazy_prompts/core/: context_processors.py
lazy_prompts/feed/: urls.py  views.py
lazy_prompts/feed/templates/: about.html  home.html  hot_prompts.html
lazy_prompts/feed/templates/partials/: create_prompt_modal.html  posts.html
lazy_prompts/lazy_prompts/: asgi.py  settings.py  urls.py  wsgi.py
lazy_prompts/likes/: admin.py  models.py  urls.py  views.py
lazy_prompts/likes/migrations/: 0001_initial.py
lazy_prompts/prompt_posts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
lazy_prompts/prompt_posts/migrations/: 0001_initial.py  0002_prompt_description.py  0003_alter_prompt_slug_alter_topic_slug.py  0004_alter_prompt_table_comment_alter_topic_table_comment_and_more.py
lazy_prompts/prompt_posts/templates/: topic_prompts.html
lazy_prompts/search/: urls.py  views.py
lazy_prompts/search/templates/: search.html
lazy_prompts/static/css/: auth.css  feed.css  fonts.css  styles.css
lazy_prompts/static/js/: create-prompt.js  main.js  navbar.js
lazy_prompts/templates/layouts/: base.html
lazy_prompts/templates/layouts/partials/: footer.html  navbar.html
lazy_prompts/users/: allowed_email_providers.py  forms.py  urls.py  views.py
lazy_prompts/users/templates/: my_login.html  profile.html  register.html  registration.html
lazy_prompts/users/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  (+3 more)
(+6 files in other folders)
