[project]
name = "lazy-prompts-local"
version = "0.1.0"
description = "A community social media where people can share or copy-paste prompts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "asyncpg>=0.30.0",
    "cloudinary>=1.44.0",
    "dj-database-url==2.3.0",
    "django==5.2",
    "django-allauth[socialaccount]>=65.8.0",
    "django-debug-toolbar>=5.2.0",
    "django-unfold>=0.59.0",
    "psycopg2-binary==2.9.10",
    "psycopg[pool]>=3.2.7",
    "python-decouple>=3.8",
    "python-dotenv==1.1.0",
    "redis>=6.1.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.13.2",
]
